some changes for transparent nvim

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,6 +1,8 @@
 {
     "diagnostics.globals": [
         "vim",
-        "on_attach"
+        "on_attach",
+        "highlight",
+        "NotifyERRORBorder"
     ]
 }
